Fix text wrapping issue on mobile

--- a/src/components/Progress.scss
+++ b/src/components/Progress.scss
@@ -4,8 +4,10 @@
     display: flex;
     align-items: center;
 
+    $labelWidth: 30%;
+
     .progress {
-        width: 80%;
+        width: 100% - $labelWidth;
         background-color: rgba(255, 255, 255, 0.3);
         height: 0.7em;
         border-radius: 0.25em;
@@ -23,7 +25,7 @@
     }
 
     .label {
-        width: 20%;
+        width: $labelWidth;
         padding-right: 0.75em;
         padding-bottom: 0.1em;
         font-size: 0.8em;
